Data/execa/execa_deps_errors_files.log
13
/data/js-variants/multee/VariantsDeps/execa/variant12/execa/node_modules/signal-exit/index.js:110
  signals.forEach(function (sig) {
          ^

TypeError: signals.forEach is not a function
    at Object.<anonymous> (/data/js-variants/multee/VariantsDeps/execa/variant12/execa/node_modules/signal-exit/index.js:110:11)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1159:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Module._load (node:internal/modules/cjs/loader:827:12)
    at Module.require (node:internal/modules/cjs/loader:1005:19)
    at require (node:internal/modules/cjs/helpers:102:18)
    at Object.<anonymous> (/data/js-variants/multee/VariantsDeps/execa/variant12/execa/node_modules/open-editor/node_modules/execa/lib/kill.js:3:16)
    at Module._compile (node:internal/modules/cjs/loader:1105:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1159:10)

Node.js v18.3.0
file:///data/js-variants/multee/VariantsDeps/execa/variant10/execa/node_modules/mem/dist/index.js:1
import mimicFn from 'mimic-fn';
       ^^^^^^^
SyntaxError: The requested module 'mimic-fn' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
